ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: server-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/websocket-services: serverapp
    nginx.org/websocket-services: serverapp
spec:
  rules:
  - host: mastercloudapps3.es
    http:
      paths:
      - path: /
        backend:
          serviceName: serverapp
          servicePort: 8080
      - path: /server(/|$)(.*)
        backend:
          serviceName: serverapp
          servicePort: 8080
